archive/__before_move/cluster/apps/development/documentation/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: documentation
  name: documentation
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    traefik.ingress.kubernetes.io/router.middlewares: networking-forwardauth-authelia@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: file-document-edit
spec:
  tls:
    - secretName: ${SECRET_DOMAIN_INTERNAL//./-}-tls
      hosts:
        - doku.${SECRET_DOMAIN_INTERNAL}
  rules:
    - host: doku.${SECRET_DOMAIN_INTERNAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documentation
                port:
                  number: 8000
